--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,7 +22,7 @@
         <div class="right">
         
             <ul>
-                <li><a target="_blank" href="{% url 'schema-redoc' %}">View Documentation on Redoc</a></li>
+                <li><a target="_blank" href="{% url 'schema-redoc' %}">View Documentation on ReDoc</a></li>
                 <li><a href="{% url 'schema-swagger-ui' %}">View Documentation on SwaggerUI</a></li>
             </ul>
         </div>
