feat: addfeatures to homepage

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,8 +14,26 @@
         <div class = "left">
             <h1>Todo List API</h1>
                 <p>
-                    This is a simple API for a todo list.
+                    This is a simple API to perform all the functions of a basic todo app.
                 </p>
+
+                <p>
+                    The API is built on the Django framework and uses the Django Rest Framework.
+                </p>
+
+                <h2>Features</h2>
+
+                <ul>
+                    <li>Register User</li>
+                    <li>Login User</li>
+                    <li>Create a todo</li>
+                    <li>Update a todo</li>
+                    <li>Delete a todo</li>
+                    <li>Get all todos</li>
+                    <li>Filter todos</li>
+                    <li>Search todos</li>
+                    <li>Order todos</li>
+                </ul>
 
         </div>
 
