--- a/static/style.css
+++ b/static/style.css
@@ -35,9 +35,18 @@ body{
     }
     
 .left p{
-    font-weight: 800;
+    font-weight: 600;
+    margin-bottom: 8px;
 }
     
+.left h2, h1{
+    text-decoration: underline;
+}
+
+.left li{
+    list-style: none;
+    font-weight: 600;
+}
 
 
 .right{
